--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
-    "react-use": "^17.5.1"
+    "react-use": "^17.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
