--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -24,7 +24,7 @@ jobs:
             --build-arg VITE_FIREBASE_STORAGE_BUCKET=${{ secrets.FIREBASE_STORAGE_BUCKET }} \
             --build-arg VITE_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.FIREBASE_MESSAGING_SENDER_ID }} \
             --build-arg VITE_FIREBASE_APP_ID=${{ secrets.VITE_FIREBASE_APP_ID }} \
-            --build-arg VITE_SAVECONNECTS_FRONT_URL=${{ SAVECONNECTS_FRONT_URL }} \
+            --build-arg VITE_SAVECONNECTS_FRONT_URL=${{ secrets.SAVECONNECTS_FRONT_URL }} \
             -t save-connects_ui .
 
       - name: Push Docker image to Docker Hub
