--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,17 +14,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build Docker image
-        run: |
-          docker build -t save-connects:frontend -f ./Dockerfile .
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Push Docker image to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Build Docker Image using Docker Compose
+        run: |
+          docker-compose build
+
+      - name: Tag and Push Docker Image to Docker Hub
         env:
           DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
           DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
         run: |
           echo $DOCKER_HUB_ACCESS_TOKEN | docker login -u $DOCKER_HUB_USERNAME --password-stdin
-          docker tag save-connects:frontend $DOCKER_HUB_USERNAME/save-connects:frontend
+          docker tag saveconnects-frontend:latest $DOCKER_HUB_USERNAME/save-connects:frontend
           docker push $DOCKER_HUB_USERNAME/save-connects:frontend
 
       - name: Connect with VPS and deploy
