--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,7 +25,7 @@ jobs:
             --build-arg VITE_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.FIREBASE_MESSAGING_SENDER_ID }} \
             --build-arg VITE_FIREBASE_APP_ID=${{ secrets.VITE_FIREBASE_APP_ID }} \
             --build-arg VITE_SAVECONNECTS_FRONT_URL=${{ secrets.SAVECONNECTS_FRONT_URL }} \
-            -t save-connects_ui .
+            -t save-connects:frontend .
 
       - name: Push Docker image to Docker Hub
         env:
@@ -33,8 +33,8 @@ jobs:
           DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
         run: |
           echo $DOCKER_HUB_ACCESS_TOKEN | docker login -u $DOCKER_HUB_USERNAME --password-stdin
-          docker tag save-connects_ui $DOCKER_HUB_USERNAME/save-connects_ui:latest
-          docker push $DOCKER_HUB_USERNAME/save-connects_ui:latest
+          docker tag save-connects:frontend $DOCKER_HUB_USERNAME/save-connects:frontend
+          docker push $DOCKER_HUB_USERNAME/save-connects:frontend
 
       - name: Connect with VPS and deploy
         uses: appleboy/ssh-action@master
