--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.4",
     "firebase": "^10.13.0",
     "jspdf": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
